Ajuste de textos
Ajuste de textos para melhorar a dinamica

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <!-- About Start -->
-@await Html.PartialAsync("__About")
+@await Html.PartialAsync("__Contato")
 <!-- About End -->
 <!-- Features Start -->
 @await Html.PartialAsync("__Features")
