--- a/Pages/Shared/__Hero.cshtml
+++ b/Pages/Shared/__Hero.cshtml
@@ -5,10 +5,10 @@
             <img class="w-100" src="~/landingpage/img/carousel-1.jpg" alt="Image">
             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                 <div class="p-3" style="max-width: 900px;">
-                    <h5 class="text-white text-uppercase mb-3 animated slideInDown">Criativo e Inovador</h5>
+                    <h5 class="text-white text-uppercase mb-3 animated slideInDown">Criatividade e Inovação</h5>
                     <h1 class="display-1 text-white mb-md-4 animated zoomIn">Soluções Digitais Para Sua Empresa</h1>
                     <a asp-area="" asp-page="/Services" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">@TituloEnum.TITULO_PLURAL_SERVICO</a>
-                    <a asp-area="" asp-page="/Contact" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Contate-nos</a>
+                    <a asp-area="" asp-page="/Contato" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Entre em Contato</a>
                 </div>
             </div>
         </div>
@@ -16,14 +16,15 @@
             <img class="w-100" src="~/landingpage/img/carousel-2.jpg" alt="Image">
             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                 <div class="p-3" style="max-width: 900px;">
-                    <h5 class="text-white text-uppercase mb-3 animated slideInDown">Somos a</h5>
+                    <h5 class="text-white text-uppercase mb-3 animated slideInDown">Conheça a</h5>
                     <h1 class="display-1 text-white mb-md-4 animated zoomIn">SeveroTech</h1>
                     <a asp-area="" asp-page="/Services" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">@TituloEnum.TITULO_PLURAL_SERVICO</a>
-                    <a asp-area="" asp-page="/Contact" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Contate-nos</a>
+                    <a asp-area="" asp-page="/Contato" class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight">Entre em Contato</a>
                 </div>
             </div>
         </div>
     </div>
+
     <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel"
             data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
