--- a/Pages/Shared/__Contato.cshtml
+++ b/Pages/Shared/__Contato.cshtml
@@ -40,9 +40,9 @@
                 </div>
             </div>
         </div>
-        <div class="row g-5">
+        <div class="row g-5">@*
             <div class="col-lg-6 wow slideInUp" data-wow-delay="0.3s">
-                <form>
+                <form action="mailto:contato@severotech.com.br" method="post" enctype="text/plain">
                     <div class="row g-3">
                         <div class="col-md-6">
                             <input type="text" class="form-control border-0 bg-light px-4" placeholder="Seu Nome" style="height: 55px;">
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                 </form>
-            </div>
+            </div>*@
             <div class="col-lg-6 wow slideInUp" data-wow-delay="0.6s">
                 <iframe class="position-relative rounded w-100 h-100"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3892.0070073973807!2d-38.325433800000006!3d-12.712965400000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x71669e64c983b37%3A0x39d54fe17ede6e80!2sR.%20Garatinga%2C%20220%20-%20Gleba%20C%2C%20Cama%C3%A7ari%20-%20BA%2C%2042807-017!5e0!3m2!1spt-PT!2sbr!4v1713964878008!5m2!1spt-PT!2sbr"
