--- a/Pages/Shared/__Features.cshtml
+++ b/Pages/Shared/__Features.cshtml
@@ -1,8 +1,8 @@
 ﻿<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
     <div class="container py-5">
         <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
-            <h5 class="fw-bold text-primary text-uppercase">Why Choose Us</h5>
-            <h1 class="mb-0">We Are Here to Grow Your Business Exponentially</h1>
+            <h5 class="fw-bold text-primary text-uppercase">POR QUE ESCOLHER-NOS</h5>
+            <h1 class="mb-0">Estamos aqui para impulsionar o crescimento do seu negócio</h1>
         </div>
         <div class="row g-5">
             <div class="col-lg-4">
@@ -11,15 +11,15 @@
                         <div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                             <i class="fa fa-cubes text-white"></i>
                         </div>
-                        <h4>Best In Industry</h4>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet lorem diam dolor eos et diam dolor</p>
+                        <h4>O Melhor da Indústria</h4>
+                        <p class="mb-0">Garantimos os melhores serviços e qualidade para você.</p>
                     </div>
                     <div class="col-12 wow zoomIn" data-wow-delay="0.6s">
                         <div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
-                            <i class="fa fa-award text-white"></i>
+                            <i class="fa fa-users-cog text-white"></i>
                         </div>
-                        <h4>Award Winning</h4>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet lorem diam dolor eos et diam dolor</p>
+                        <h4>Equipe Profissional</h4>
+                        <p class="mb-0">Contamos com uma equipe profissional e dedicada para oferecer o melhor atendimento.</p>
                     </div>
                 </div>
             </div>
@@ -32,17 +32,10 @@
                 <div class="row g-5">
                     <div class="col-12 wow zoomIn" data-wow-delay="0.4s">
                         <div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
-                            <i class="fa fa-users-cog text-white"></i>
-                        </div>
-                        <h4>Professional Staff</h4>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet lorem diam dolor eos et diam dolor</p>
-                    </div>
-                    <div class="col-12 wow zoomIn" data-wow-delay="0.8s">
-                        <div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
                             <i class="fa fa-phone-alt text-white"></i>
                         </div>
-                        <h4>24/7 Support</h4>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet lorem diam dolor eos et diam dolor</p>
+                        <h4>Suporte 24/7</h4>
+                        <p class="mb-0">Oferecemos suporte 24 horas por dia, 7 dias por semana, para estar sempre à disposição.</p>
                     </div>
                 </div>
             </div>
