--- a/Pages/Shared/__Navbar.cshtml
+++ b/Pages/Shared/__Navbar.cshtml
@@ -14,9 +14,9 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0">
                 <a asp-area="" asp-page="/Index" class="nav-item nav-link @(currentCshtmlName.Equals("") ? "active" : "")">@TituloEnum.TITULO_INICIO</a>
-                <a asp-area="" asp-page="/About" class="nav-item nav-link @(currentCshtmlName.Equals("About") ? "active" : "")">@TituloEnum.TITULO_SOBRE</a>
+                <a asp-area="" asp-page="/Sobre" class="nav-item nav-link @(currentCshtmlName.Equals("About") ? "active" : "")">@TituloEnum.TITULO_SOBRE</a>
                 <a asp-area="" asp-page="/Services" class="nav-item nav-link @(currentCshtmlName.Equals("Services") ? "active" : "")">@TituloEnum.TITULO_SERVICO</a>
-                <a asp-area="" asp-page="/Contact" class="nav-item nav-link @(currentCshtmlName.Equals("Contact") ? "active" : "")">@TituloEnum.TITULO_CONTATO</a>
+                <a asp-area="" asp-page="/Contato" class="nav-item nav-link @(currentCshtmlName.Equals("Contact") ? "active" : "")">@TituloEnum.TITULO_CONTATO</a>
                 <a href="https://controlweb.severotech.com.br" class="nav-item nav-link" target="_blank">ControlWeb</a>
                 <a href="https://pontoonline.severotech.com.br" class="nav-item nav-link" target="_blank">Ponto Online</a>
             </div>
