--- a/Pages/Shared/__Sobre.cshtml
+++ b/Pages/Shared/__Sobre.cshtml
@@ -4,10 +4,10 @@
         <div class="row g-5">
             <div class="col-lg-7">
                 <div class="section-title position-relative pb-3 mb-5">
-                    <h5 class="fw-bold text-primary text-uppercase">@TituloEnum.TITULO_SOBRE</h5>
-                    <h1 class="mb-0">A melhor solução de TI com mais de 10 anos de experiencia.</h1>
+                    <h5 class="fw-bold text-primary text-uppercase">@TituloEnum.TITULO_SOBRE_NOS</h5>
+                    <h1 class="mb-0">A melhor solução de TI com mais de 10 anos de experiência.</h1>
                 </div>
-                <p class="mb-4">Trabalhando com dedicação para deixar nossos clientes sempre satisfeitos.</p>
+                <p class="mb-4">Trabalhamos com dedicação para manter nossos clientes sempre satisfeitos.</p>
                 <div class="row g-0 mb-3">
                     <div class="col-sm-6 wow zoomIn" data-wow-delay="0.2s">
                         <h5 class="mb-3"><i class="fa fa-check text-primary me-3"></i>Equipe Profissional</h5>
@@ -23,11 +23,11 @@
                         <i class="fa fa-phone-alt text-white"></i>
                     </div>
                     <div class="ps-4">
-                        <h5 class="mb-2">Entre em contato caso tenha dúvidas</h5>
+                        <h5 class="mb-2">Entre em contato em caso de dúvidas</h5>
                         <h4 class="text-primary mb-0">@ContactEnum.NUMERO_TELEFONE</h4>
                     </div>
                 </div>
-                <a asp-page="/Contact" class="btn btn-primary py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s">Solicite o contato caso desejar</a>
+                <a asp-page="/Contact" class="btn btn-primary py-3 px-5 mt-3 wow zoomIn" data-wow-delay="0.9s">Solicite o contato, caso deseje</a>
             </div>
             <div class="col-lg-5" style="min-height: 500px;">
                 <div class="position-relative h-100">
@@ -36,4 +36,5 @@
             </div>
         </div>
     </div>
+
 </div>
