--- a/Pages/Shared/__Team.cshtml
+++ b/Pages/Shared/__Team.cshtml
@@ -1,7 +1,8 @@
-﻿<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+﻿@using SeveroTechLanding.Common
+<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
     <div class="container py-5">
         <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
-            <h5 class="fw-bold text-primary text-uppercase">Membros do time</h5>
+            <h5 class="fw-bold text-primary text-uppercase">Equipe de Liderança</h5>
             <h1 class="mb-0">Profissionais capacitados garantindo serviços de qualidade</h1>
         </div>
         <div class="row g-5">
@@ -10,15 +11,13 @@
                     <div class="team-img position-relative overflow-hidden">
                         <img class="img-fluid w-100" src="~/landingpage/img/team-1.jpg" alt="">
                         <div class="team-social">
-                            <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-twitter fw-normal"></i></a>
-                            <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
-                            <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-instagram fw-normal"></i></a>
-                            <a class="btn btn-lg btn-primary btn-lg-square rounded" href=""><i class="fab fa-linkedin-in fw-normal"></i></a>
+                            <a class="btn btn-lg btn-primary btn-lg-square rounded" href=@SocialEnum.INSTA_MATHEUS target="_blank"><i class="fab fa-instagram fw-normal"></i></a>
+                            <a class="btn btn-lg btn-primary btn-lg-square rounded" href=@SocialEnum.LINKEDIN_MATHEUS target="_blank"><i class="fab fa-linkedin-in fw-normal"></i></a>
                         </div>
                     </div>
                     <div class="text-center py-4">
                         <h4 class="text-primary">Matheus Severo Simões</h4>
-                        <p class="text-uppercase m-0">CEO</p>
+                        <p class="text-uppercase m-0">Fundador</p>
                     </div>
                 </div>
             </div>
