Ajustes na landing page
Ajustes

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -2,9 +2,9 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="utf-8">
-    <title>SeveroTech</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SeveroTech - Soluções Tecnológicas</title>
 
     @await Html.PartialAsync("__css")
     @await RenderSectionAsync("Styles", required: false)
