--- a/Pages/Shared/__Features.cshtml
+++ b/Pages/Shared/__Features.cshtml
@@ -1,25 +1,25 @@
 ﻿<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
     <div class="container py-5">
         <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
-            <h5 class="fw-bold text-primary text-uppercase">POR QUE ESCOLHER-NOS</h5>
-            <h1 class="mb-0">Estamos aqui para impulsionar o crescimento do seu negócio</h1>
+            <h5 class="fw-bold text-green-severotech text-uppercase">POR QUE ESCOLHER-NOS</h5>
+            <h1 class="text-green-severotech mb-0">Estamos aqui para impulsionar o crescimento do seu negócio</h1>
         </div>
         <div class="row g-5">
             <div class="col-lg-4">
                 <div class="row g-5">
                     <div class="col-12 wow zoomIn" data-wow-delay="0.2s">
-                        <div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
-                            <i class="fa fa-cubes text-white"></i>
+                        <div class="bg-green rounded d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
+                            <i class="fa fa-cubes text-dark"></i>
                         </div>
-                        <h4>O Melhor da Indústria</h4>
-                        <p class="mb-0">Garantimos os melhores serviços e qualidade para você.</p>
+                        <h4 class="text-green-severotech">O Melhor da Indústria</h4>
+                        <p class="text-green-severotech mb-0">Garantimos os melhores serviços e qualidade para você.</p>
                     </div>
                     <div class="col-12 wow zoomIn" data-wow-delay="0.6s">
-                        <div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
-                            <i class="fa fa-users-cog text-white"></i>
+                        <div class="bg-green rounded d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
+                            <i class="fa fa-users-cog text-dark"></i>
                         </div>
-                        <h4>Equipe Profissional</h4>
-                        <p class="mb-0">Contamos com uma equipe profissional e dedicada para oferecer o melhor atendimento.</p>
+                        <h4 class="text-green-severotech">Equipe Profissional</h4>
+                        <p class="text-green-severotech mb-0">Contamos com uma equipe profissional e dedicada para oferecer o melhor atendimento.</p>
                     </div>
                 </div>
             </div>
@@ -31,11 +31,11 @@
             <div class="col-lg-4">
                 <div class="row g-5">
                     <div class="col-12 wow zoomIn" data-wow-delay="0.4s">
-                        <div class="bg-primary rounded d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
-                            <i class="fa fa-phone-alt text-white"></i>
+                        <div class="bg-green rounded d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
+                            <i class="fa fa-phone-alt text-dark"></i>
                         </div>
-                        <h4>Suporte 24/7</h4>
-                        <p class="mb-0">Oferecemos suporte 24 horas por dia, 7 dias por semana, para estar sempre à disposição.</p>
+                        <h4 class="text-green-severotech">Suporte 24/7</h4>
+                        <p class="text-green-severotech mb-0">Oferecemos suporte 24 horas por dia, 7 dias por semana, para estar sempre à disposição.</p>
                     </div>
                 </div>
             </div>
