--- a/Pages/Shared/__FullScreenSearch.cshtml
+++ b/Pages/Shared/__FullScreenSearch.cshtml
@@ -7,7 +7,7 @@
             <div class="modal-body d-flex align-items-center justify-content-center">
                 <div class="input-group" style="max-width: 600px;">
                     <input type="text" class="form-control bg-transparent border-primary p-3" placeholder="Type search keyword">
-                    <button class="btn btn-primary px-4"><i class="bi bi-search"></i></button>
+                    <button class="btn btn-green px-4"><i class="bi bi-search"></i></button>
                 </div>
             </div>
         </div>
