--- a/Pages/Shared/__Service.cshtml
+++ b/Pages/Shared/__Service.cshtml
@@ -2,18 +2,18 @@
 <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
     <div class="container py-5">
         <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
-            <h5 class="fw-bold text-primary text-uppercase">Nossos Serviços</h5>
-            <h1 class="mb-0">Soluções de TI Personalizadas para o Sucesso do Seu Negócio</h1>
+            <h5 class="fw-bold text-green-severotech text-uppercase">Nossos Serviços</h5>
+            <h1 class="text-green-severotech mb-0">Soluções de TI Personalizadas para o Sucesso do Seu Negócio</h1>
         </div>
         <div class="row g-5">
             <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
                     <div class="service-icon">
-                        <i class="fa fa-shield-alt text-white"></i>
+                        <i class="fa fa-shield-alt text-dark"></i>
                     </div>
                     <h4 class="mb-3">Segurança Cibernética</h4>
                     <p class="m-0">Oferecemos soluções de segurança cibernética para proteger o seu negócio contra ameaças.</p>
-                    <a class="btn btn-lg btn-primary rounded" href="">
+                    <a class="btn btn-lg btn-green rounded" href="">
                         <i class="bi bi-arrow-right"></i>
                     </a>
                 </div>
@@ -21,11 +21,11 @@
             <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
                     <div class="service-icon">
-                        <i class="fa fa-chart-pie text-white"></i>
+                        <i class="fa fa-chart-pie text-dark"></i>
                     </div>
                     <h4 class="mb-3">Análise de Dados</h4>
                     <p class="m-0">Utilizamos análise de dados para fornecer insights valiosos para o seu negócio.</p>
-                    <a class="btn btn-lg btn-primary rounded" href="">
+                    <a class="btn btn-lg btn-green rounded" href="">
                         <i class="bi bi-arrow-right"></i>
                     </a>
                 </div>
@@ -33,11 +33,11 @@
             <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
                     <div class="service-icon">
-                        <i class="fa fa-code text-white"></i>
+                        <i class="fa fa-code text-dark"></i>
                     </div>
                     <h4 class="mb-3">Desenvolvimento Web</h4>
                     <p class="m-0">Criamos sites e aplicativos web personalizados para atender às suas necessidades específicas.</p>
-                    <a class="btn btn-lg btn-primary rounded" href="">
+                    <a class="btn btn-lg btn-green rounded" href="">
                         <i class="bi bi-arrow-right"></i>
                     </a>
                 </div>
@@ -45,11 +45,11 @@
             <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
                     <div class="service-icon">
-                        <i class="fab fa-android text-white"></i>
+                        <i class="fab fa-android text-dark"></i>
                     </div>
                     <h4 class="mb-3">Desenvolvimento de Aplicativos</h4>
                     <p class="m-0">Desenvolvemos aplicativos móveis personalizados para impulsionar o seu negócio.</p>
-                    <a class="btn btn-lg btn-primary rounded" href="">
+                    <a class="btn btn-lg btn-green rounded" href="">
                         <i class="bi bi-arrow-right"></i>
                     </a>
                 </div>
@@ -57,20 +57,20 @@
             <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
                 <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
                     <div class="service-icon">
-                        <i class="fa fa-search text-white"></i>
+                        <i class="fa fa-search text-dark"></i>
                     </div>
                     <h4 class="mb-3">Otimização de SEO</h4>
                     <p class="m-0">Melhoramos a visibilidade do seu site nos mecanismos de busca para atrair mais clientes.</p>
-                    <a class="btn btn-lg btn-primary rounded" href="">
+                    <a class="btn btn-lg btn-green rounded" href="">
                         <i class="bi bi-arrow-right"></i>
                     </a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
-                <div class="position-relative bg-primary rounded h-100 d-flex flex-column align-items-center justify-content-center text-center p-5">
-                    <h3 class="text-white mb-3">Ligue-nos para um Orçamento</h3>
-                    <p class="text-white mb-3">Entre em contato conosco para obter um orçamento personalizado para o seu projeto.</p>
-                    <h3 class="text-white mb-0">@ContactEnum.NUMERO_TELEFONE</h3>
+                <div class="position-relative bg-green rounded h-100 d-flex flex-column align-items-center justify-content-center text-center p-5">
+                    <h3 class="mb-3">Ligue-nos para um Orçamento</h3>
+                    <p class="mb-3">Entre em contato conosco para obter um orçamento personalizado para o seu projeto.</p>
+                    <h3 class="mb-0">@ContactEnum.NUMERO_TELEFONE</h3>
                 </div>
             </div>
         </div>
