--- a/Pages/Shared/__Team.cshtml
+++ b/Pages/Shared/__Team.cshtml
@@ -2,22 +2,22 @@
 <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
     <div class="container py-5">
         <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
-            <h5 class="fw-bold text-primary text-uppercase">Equipe de Liderança</h5>
-            <h1 class="mb-0">Profissionais capacitados garantindo serviços de qualidade</h1>
+            <h5 class="fw-bold text-green-severotech text-uppercase">Equipe de Liderança</h5>
+            <h1 class="text-green-severotech mb-0">Profissionais capacitados garantindo serviços de qualidade</h1>
         </div>
         <div class="row g-5">
             <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
-                <div class="team-item bg-light rounded overflow-hidden">
+                <div class="team-item bg-dark-severotech rounded overflow-hidden">
                     <div class="team-img position-relative overflow-hidden">
                         <img class="img-fluid w-100" src="~/landingpage/img/team-1.jpg" alt="">
                         <div class="team-social">
-                            <a class="btn btn-lg btn-primary btn-lg-square rounded" href=@SocialEnum.INSTA_MATHEUS target="_blank"><i class="fab fa-instagram fw-normal"></i></a>
-                            <a class="btn btn-lg btn-primary btn-lg-square rounded" href=@SocialEnum.LINKEDIN_MATHEUS target="_blank"><i class="fab fa-linkedin-in fw-normal"></i></a>
+                            <a class="btn btn-lg btn-green btn-lg-square rounded" href=@SocialEnum.INSTA_MATHEUS target="_blank"><i class="fab fa-instagram fw-normal"></i></a>
+                            <a class="btn btn-lg btn-green btn-lg-square rounded" href=@SocialEnum.LINKEDIN_MATHEUS target="_blank"><i class="fab fa-linkedin-in fw-normal"></i></a>
                         </div>
                     </div>
                     <div class="text-center py-4">
-                        <h4 class="text-primary">Matheus Severo Simões</h4>
-                        <p class="text-uppercase m-0">Fundador</p>
+                        <h4 class="text-green-severotech">Matheus Severo Simões</h4>
+                        <p class="text-uppercase text-green-severotech m-0">Fundador</p>
                     </div>
                 </div>
             </div>
