Ajustes de icones e imagens.

--- a/Pages/Shared/__Contato.cshtml
+++ b/Pages/Shared/__Contato.cshtml
@@ -9,7 +9,7 @@
             <div class="col-lg-4">
                 <div class="d-flex align-items-center wow fadeIn" data-wow-delay="0.1s">
                     <div class="bg-green d-flex align-items-center justify-content-center rounded" style="width: 60px; height: 60px;">
-                        <i class="fa fa-phone-alt text-white"></i>
+                        <i class="fa fa-phone-alt text-dark"></i>
                     </div>
                     <div class="ps-4">
                         <h5 class="text-green-severotech mb-2">Ligue para tirar qualquer dúvida</h5>
@@ -20,7 +20,7 @@
             <div class="col-lg-4">
                 <div class="d-flex align-items-center wow fadeIn" data-wow-delay="0.4s">
                     <div class="bg-green d-flex align-items-center justify-content-center rounded" style="width: 60px; height: 60px;">
-                        <i class="fa fa-envelope-open text-white"></i>
+                        <i class="fa fa-envelope-open text-dark"></i>
                     </div>
                     <div class="ps-4">
                         <h5 class="text-green-severotech mb-2">Email para tirar dúvidas</h5>
@@ -31,10 +31,10 @@
             <div class="col-lg-4">
                 <div class="d-flex align-items-center wow fadeIn" data-wow-delay="0.8s">
                     <div class="bg-green d-flex align-items-center justify-content-center rounded" style="width: 60px; height: 60px;">
-                        <i class="fa fa-map-marker-alt text-white"></i>
+                        <i class="fa fa-map-marker-alt text-dark"></i>
                     </div>
                     <div class="ps-4">
-                        <h5 class="mb-2">Visite nosso escritório</h5>
+                        <h5 class="text-green-severotech mb-2">Visite nosso escritório</h5>
                         <h4 class="text-green-severotech mb-0">@string.Join(", ", ContactEnum.CIDADE, ContactEnum.ESTADO, ContactEnum.PAIS)</h4>
                     </div>
                 </div>
