--- a/Pages/Shared/__Footer.cshtml
+++ b/Pages/Shared/__Footer.cshtml
@@ -61,7 +61,7 @@
             <div class="col-lg-8 col-md-6">
                 <div class="d-flex align-items-center justify-content-center" style="height: 75px;">
                     <p class="mb-0">
-                        &copy; <a class="text-white border-bottom" href="https://severotech.com.br">SeveroTech</a>. Todos os direitos reservados.
+                        &copy; <a class="text-green-severotech border-bottom" href="https://severotech.com.br">SeveroTech</a>. Todos os direitos reservados.
                         Designer Criado Por Matheus Severo.
                     </p>
                 </div>
