--- a/Pages/Shared/__Header.cshtml
+++ b/Pages/Shared/__Header.cshtml
@@ -12,9 +12,9 @@
 <div class="container-fluid bg-green py-5 bg-header" style="margin-bottom: 90px;">
     <div class="row py-5">
         <div class="col-12 pt-lg-5 mt-lg-5 text-center">
-            <h1 class="display-4 text-white animated zoomIn">@pageTitle</h1>
-            <a asp-area="" asp-page="/Index" class="h5 text-white">@TituloEnum.TITULO_INICIO</a>
-            <i class="far fa-circle text-white px-2"></i>
+            <h1 class="display-4 text-green-severotech animated zoomIn">@pageTitle</h1>
+            <a asp-area="" asp-page="/Index" class="h5 text-green-severotech">@TituloEnum.TITULO_INICIO</a>
+            <i class="far fa-circle text-green-severotech px-2"></i>
             <a href="" class="h5 text-green-severotech">@pageTitle</a>
         </div>
     </div>
