--- a/Pages/Shared/__Sobre.cshtml
+++ b/Pages/Shared/__Sobre.cshtml
@@ -5,25 +5,25 @@
             <div class="col-lg-7">
                 <div class="section-title position-relative pb-3 mb-5">
                     <h5 class="fw-bold text-green-severotech text-uppercase">@TituloEnum.TITULO_SOBRE_NOS</h5>
-                    <h1 class="mb-0">A melhor solução de TI com mais de 10 anos de experiência.</h1>
+                    <h1 class="text-green-severotech mb-0">A melhor solução de TI com mais de 10 anos de experiência.</h1>
                 </div>
-                <p class="mb-4">Trabalhamos com dedicação para manter nossos clientes sempre satisfeitos.</p>
+                <p class="text-green-severotech mb-4">Trabalhamos com dedicação para manter nossos clientes sempre satisfeitos.</p>
                 <div class="row g-0 mb-3">
                     <div class="col-sm-6 wow zoomIn" data-wow-delay="0.2s">
-                        <h5 class="mb-3"><i class="fa fa-check text-green-severotech me-3"></i>Equipe Profissional</h5>
-                        <h5 class="mb-3"><i class="fa fa-check text-green-severotech me-3"></i>Suporte 24/7</h5>
+                        <h5 class="text-green-severotech mb-3"><i class="fa fa-check text-green-severotech me-3"></i>Equipe Profissional</h5>
+                        <h5 class="text-green-severotech mb-3"><i class="fa fa-check text-green-severotech me-3"></i>Suporte 24/7</h5>
                     </div>
                     <div class="col-sm-6 wow zoomIn" data-wow-delay="0.4s">
-                        <h5 class="mb-3"><i class="fa fa-check text-green-severotech me-3"></i>Qualidade Garantida</h5>
-                        <h5 class="mb-3"><i class="fa fa-check text-green-severotech me-3"></i>Preços Justos</h5>
+                        <h5 class="text-green-severotech mb-3"><i class="fa fa-check text-green-severotech me-3"></i>Qualidade Garantida</h5>
+                        <h5 class="text-green-severotech mb-3"><i class="fa fa-check text-green-severotech me-3"></i>Preços Justos</h5>
                     </div>
                 </div>
                 <div class="d-flex align-items-center mb-4 wow fadeIn" data-wow-delay="0.6s">
                     <div class="bg-green d-flex align-items-center justify-content-center rounded" style="width: 60px; height: 60px;">
-                        <i class="fa fa-phone-alt text-white"></i>
+                        <i class="fa fa-phone-alt text-dark"></i>
                     </div>
                     <div class="ps-4">
-                        <h5 class="mb-2">Entre em contato em caso de dúvidas</h5>
+                        <h5 class="text-green-severotech mb-2">Entre em contato em caso de dúvidas</h5>
                         <h4 class="text-green-severotech mb-0">@ContactEnum.NUMERO_TELEFONE</h4>
                     </div>
                 </div>
