--- a/wwwroot/landingpage/css/style.css
+++ b/wwwroot/landingpage/css/style.css
@@ -6,7 +6,7 @@
     --dark: #171C16;
     --green: #0FE082;
     --mist: #D3D3D3;
-
+    --bs-custom-rgb: 15, 224, 130; /* Cor #0FE082 */
 }
 
 body {
@@ -107,9 +107,9 @@ h6,
 }
 
 .btn-green {
-    color: #fff;
-    background-color: #0FE082;
-    border-color: #0FE082;
+    color: var(--dark);
+    background-color: var(--green);
+    border-color: var(--green);
 }
 
 .btn-square {
@@ -142,20 +142,18 @@ h6,
 }
 
 .text-green-severotech {
-    --bs-custom-rgb: 15, 224, 130; /* Cor #0FE082 */
     --bs-text-opacity: 1;
     color: rgba(var(--bs-custom-rgb), var(--bs-text-opacity)) !important;
 }
 
 .bg-green {
-    --bs-custom-rgb: 15, 224, 130; /* Cor #0FE082 */
     --bs-bg-opacity: 1;
     background-color: rgba(var(--bs-custom-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .btn-outline-green {
-    color: #0FE082;
-    border-color: #0FE082;
+    color: var(--green);
+    border-color: var(--green);
 }
 
 
@@ -165,7 +163,7 @@ h6,
     position: relative;
     margin-left: 25px;
     padding: 35px 0;
-    color: #0FE082;
+    color: var(--green);
     font-size: 15px;
     font-weight: 600;
     outline: none;
@@ -453,7 +451,7 @@ h6,
 }
 
 .team-item:hover .team-social {
-    background: rgba(9, 30, 62, .7);
+    background: rgba(0, 0, 0, .7);
 }
 
 .team-item:hover .team-social a.btn:first-child {
@@ -509,7 +507,7 @@ h6,
 }
 
 .bg-header {
-    background: linear-gradient(rgba(9, 30, 62, .7), rgba(9, 30, 62, .7)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .7)), url(../img/carousel-1.jpg) center center no-repeat;
     background-size: cover;
 }
 
@@ -521,6 +519,9 @@ h6,
     padding-left: 10px;
 }
 
+.carousel-inner {
+}
+
 @media (min-width: 767.98px) {
     .footer-about {
         margin-bottom: -75px;
@@ -528,8 +529,31 @@ h6,
 }
 
 .logo {
-    width: 4rem ;
+    width: 4rem;
     height: 4rem;
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+/* Estilos para a logo em telas maiores (desktop) */
+.logo-frontal {
+    width: 1000px;
+    height: 250px;
+    margin: 0;
+    padding: 10px;
+    padding-right: 250px;
+    border: 0;
+}
+
+/* Media query para telas menores, como tablets e celulares */
+@media screen and (max-width: 768px) {
+    .logo-frontal {
+        width: 80%; /* Defina a largura desejada para telas menores */
+        height: auto; /* Altura ajustável para manter a proporção */
+        padding: 5px; /* Reduza o padding conforme necessário */
+        padding-right: 50px; /* Reduza o padding direito conforme necessário */
+    }
 }
 
 #titulo {
