--- a/Pages/Shared/__Footer.cshtml
+++ b/Pages/Shared/__Footer.cshtml
@@ -31,11 +31,11 @@
                             <h3 class="text-green-severotech mb-0">Links Rápidos</h3>
                         </div>
                         <div class="link-animated d-flex flex-column justify-content-start">
-                            <a class="text-green-severotech mb-2" href="#"><i class="bi bi-arrow-right text-green-severotech me-2"></i>@TituloEnum.TITULO_INICIO</a>
-                            <a class="text-green-severotech mb-2" href="#"><i class="bi bi-arrow-right text-green-severotech me-2"></i>@TituloEnum.TITULO_SOBRE</a>
-                            <a class="text-green-severotech mb-2" href="#"><i class="bi bi-arrow-right text-green-severotech me-2"></i>@TituloEnum.TITULO_PLURAL_SERVICO</a>
-                            <a class="text-green-severotech mb-2" href="#"><i class="bi bi-arrow-right text-green-severotech me-2"></i>@TituloEnum.TITULO_CONHECA_TIME</a>
-                            <a class="text-green-severotech" href="#"><i class="bi bi-arrow-right text-green-severotech me-2"></i>@TituloEnum.TITULO_CONTATE_NOS</a>
+                            <a class="text-green-severotech mb-2" asp-page="/Index"><i class="bi bi-arrow-right text-green-severotech me-2"></i>@TituloEnum.TITULO_INICIO</a>
+                            <a class="text-green-severotech mb-2" asp-page="/Sobre"><i class="bi bi-arrow-right text-green-severotech me-2"></i>@TituloEnum.TITULO_SOBRE</a>
+                            <a class="text-green-severotech mb-2" asp-page="/Services"><i class="bi bi-arrow-right text-green-severotech me-2"></i>@TituloEnum.TITULO_PLURAL_SERVICO</a>
+                            <a class="text-green-severotech mb-2" asp-page="/Equipe"><i class="bi bi-arrow-right text-green-severotech me-2"></i>@TituloEnum.TITULO_CONHECA_TIME</a>
+                            <a class="text-green-severotech" asp-page="/Contato"><i class="bi bi-arrow-right text-green-severotech me-2"></i>@TituloEnum.TITULO_CONTATE_NOS</a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
@@ -43,11 +43,11 @@
                             <h3 class="text-green-severotech mb-0">Links populares</h3>
                         </div>
                         <div class="link-animated d-flex flex-column justify-content-start">
-                            <a class="text-green-severotech mb-2" href="#"><i class="bi bi-arrow-right text-green-severotech me-2"></i>@TituloEnum.TITULO_INICIO</a>
-                            <a class="text-green-severotech mb-2" href="#"><i class="bi bi-arrow-right text-green-severotech me-2"></i>@TituloEnum.TITULO_SOBRE</a>
-                            <a class="text-green-severotech mb-2" href="#"><i class="bi bi-arrow-right text-green-severotech me-2"></i>@TituloEnum.TITULO_PLURAL_SERVICO</a>
-                            <a class="text-green-severotech mb-2" href="#"><i class="bi bi-arrow-right text-green-severotech me-2"></i>@TituloEnum.TITULO_CONHECA_TIME</a>
-                            <a class="text-green-severotech" href="#"><i class="bi bi-arrow-right text-green-severotech me-2"></i>@TituloEnum.TITULO_CONTATE_NOS</a>
+                            <a class="text-green-severotech mb-2" asp-page="/Index"><i class="bi bi-arrow-right text-green-severotech me-2"></i>@TituloEnum.TITULO_INICIO</a>
+                            <a class="text-green-severotech mb-2" asp-page="/Sobre"><i class="bi bi-arrow-right text-green-severotech me-2"></i>@TituloEnum.TITULO_SOBRE</a>
+                            <a class="text-green-severotech mb-2" asp-page="/Services"><i class="bi bi-arrow-right text-green-severotech me-2"></i>@TituloEnum.TITULO_PLURAL_SERVICO</a>
+                            <a class="text-green-severotech mb-2" asp-page="/Equipe"><i class="bi bi-arrow-right text-green-severotech me-2"></i>@TituloEnum.TITULO_CONHECA_TIME</a>
+                            <a class="text-green-severotech" asp-page="/Contato"><i class="bi bi-arrow-right text-green-severotech me-2"></i>@TituloEnum.TITULO_CONTATE_NOS</a>
                         </div>
                     </div>
                 </div>
