--- a/Pages/Shared/__Navbar.cshtml
+++ b/Pages/Shared/__Navbar.cshtml
@@ -17,6 +17,7 @@
                 <a asp-area="" asp-page="/Sobre" class="nav-item nav-link @(currentCshtmlName.Equals("Sobre") ? "active" : "")">@TituloEnum.TITULO_SOBRE</a>
                 <a asp-area="" asp-page="/Services" class="nav-item nav-link @(currentCshtmlName.Equals("Services") ? "active" : "")">@TituloEnum.TITULO_SERVICO</a>
                 <a asp-area="" asp-page="/Contato" class="nav-item nav-link @(currentCshtmlName.Equals("Contato") ? "active" : "")">@TituloEnum.TITULO_CONTATO</a>
+                <a asp-area="" asp-page="/Equipe" class="nav-item nav-link @(currentCshtmlName.Equals("Team") ? "active" : "")">@TituloEnum.TITULO_TEAM</a>
             </div>
             <butaton type="button" class="btn text-green-severotech ms-3" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fa fa-search"></i></butaton>
             
