--- a/Pages/Shared/__Service.cshtml
+++ b/Pages/Shared/__Service.cshtml
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
-                <div class="position-relative bg-green rounded h-100 d-flex flex-column align-items-center justify-content-center text-center p-5">
+                <div class="position-relative bg-light rounded h-100 d-flex flex-column align-items-center justify-content-center text-center p-5">
                     <h3 class="mb-3">Ligue-nos para um Orçamento</h3>
                     <p class="mb-3">Entre em contato conosco para obter um orçamento personalizado para o seu projeto.</p>
                     <h3 class="mb-0">@ContactEnum.NUMERO_TELEFONE</h3>
