--- a/Pages/Shared/__js.cshtml
+++ b/Pages/Shared/__js.cshtml
@@ -4,9 +4,14 @@
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-<!-- SeveroTech Advanced JavaScript -->
-<script src="~/assets/js/modern.js"></script>
-<script src="~/assets/js/ux-advanced.js"></script>
+<!-- Libraries -->
+<script src="~/landingpage/lib/wow/wow.min.js"></script>
+<script src="~/landingpage/lib/easing/easing.min.js"></script>
+<script src="~/landingpage/lib/waypoints/waypoints.min.js"></script>
+<script src="~/landingpage/lib/counterup/counterup.min.js"></script>
 
-<!-- Template JS (serÃ¡ removido na Fase 4) -->
+<!-- SeveroTech Modern JavaScript -->
+<script src="~/assets/js/modern.js"></script>
+
+<!-- Template JS (serÃ¡ removido na Fase 3) -->
 <script src="~/landingpage/js/main.js"></script>
