--- a/Pages/Shared/__js.cshtml
+++ b/Pages/Shared/__js.cshtml
@@ -1,17 +1,11 @@
-﻿<!-- jQuery (manter por compatibilidade) -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-<!-- Libraries -->
+﻿    <!-- JavaScript Libraries -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/landingpage/lib/wow/wow.min.js"></script>
 <script src="~/landingpage/lib/easing/easing.min.js"></script>
 <script src="~/landingpage/lib/waypoints/waypoints.min.js"></script>
 <script src="~/landingpage/lib/counterup/counterup.min.js"></script>
+<script src="~/landingpage/lib/owlcarousel/owl.carousel.min.js"></script>
 
-<!-- SeveroTech Modern JavaScript -->
-<script src="~/assets/js/modern.js"></script>
-
-<!-- Template JS (serÃ¡ removido na Fase 3) -->
+<!-- Template Javascript -->
 <script src="~/landingpage/js/main.js"></script>
